--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
        <h1>Chris' Super Duper Test Page</h1>
        <p><a href="com.aofl.masteringmathteachers://something?wong&nothing?wong">Launch MMA : No SSO</a></p>
        <p><a href="com.aofl.masteringmathteachers://teacher_app/?provider=clever&code=773a8326-5c3e-45d0-903b-b757f61821ef">Launch MMA: with SSO teacher account</a></p>
+       <p><a href="https://dev.mymathacademy.com/debug/debug/t1/MATH-988_SSO/builds/webgl/index.html">Launch MMA WebGL: no SSO</a></p>
+       <p><a href="https://dev.mymathacademy.com/debug/debug/t1/MATH-988_SSO/builds/webgl/index.html?provider=clever&code=773a8326-5c3e-45d0-903b-b757f61821ef">Launch MMA WebGL: with SSO teacher account</a></p>
+
     </body>
 </html>
