--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     </head>
     <body >
        <h1>Chris' Super Duper Test Page</h1>
-       <p><a href="com.aofl.masteringmathteachers://something?wong&nothing?wong">Launch MMA : No SSO</a></p>
-       <p><a href="com.aofl.masteringmathteachers://teacher_app/?provider=clever&code=773a8326-5c3e-45d0-903b-b757f61821ef">Launch MMA: with SSO teacher account</a></p>
+       <p><a href="com.aofl.masteringmathteachers://something?wong&nothing?wong">Launch MMA</a></p>
+       <p><a href="com.aofl.masteringmathteachers://teacher_app/?provider=mock&code=6470b490-6661-4531-b393-396d36236fb3">Launch MMA: with Login to teacher account 1</a></p>
+       <p><a href="com.aofl.masteringmathteachers://teacher_app/?provider=mock&code=773a8326-5c3e-45d0-903b-b757f61821ef">Launch MMA: with Login to teacher account 2</a></p>
        <p><a href="https://dev.mymathacademy.com/debug/debug/t1/MATH-988_SSO/builds/webgl/index.html">Launch MMA WebGL: no SSO</a></p>
-       <p><a href="https://dev.mymathacademy.com/debug/debug/t1/MATH-988_SSO/builds/webgl/index.html?provider=clever&code=773a8326-5c3e-45d0-903b-b757f61821ef">Launch MMA WebGL: with SSO teacher account</a></p>
+       <p><a href="https://dev.mymathacademy.com/debug/debug/t1/MATH-988_SSO/builds/webgl/index.html?provider=mock&code=6470b490-6661-4531-b393-396d36236fb3">Launch MMA WebGL: with Login to teacher account 1</a></p>
+       <p><a href="https://dev.mymathacademy.com/debug/debug/t1/MATH-988_SSO/builds/webgl/index.html?provider=mock&code=773a8326-5c3e-45d0-903b-b757f61821ef">Launch MMA WebGL: with Login to teacher account 2</a></p>
 
     </body>
 </html>
